Enable preview on external JVM.